editor-components/list/list3/list3.module.scss
@use "../../../../composer-tools//composer-base-components//base//utitilities/viewports.module.scss"
as *;

.container {
  padding: 80px 0px !important;

  .max-content {
    .cards-grid {
      gap: 0;

      &.alignment-center {
        text-align: left !important;

        .card {
          .card-content {
            align-items: flex-start !important;
            text-align: left !important;

            .card-title {
              text-align: left !important;
            }

            .event-item {
              align-items: flex-start !important;
              text-align: left !important;
            }

            .event-text-top,
            .event-text-bottom,
            .divider {
              text-align: left !important;
            }
          }
        }
      }

      .card-number {
        text-align: left !important;
        left: var(--composer-gap-xl);
        bottom: -40px;
        transform: scale(1.15);
        transform-origin: left bottom;
      }

      .intro-card {
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: flex-start;
        text-align: left;
        padding: var(--composer-gap-xl);
        border: var(--composer-border-width-xs) solid rgba(var(--composer-font-color-primary-rgb), 0.2);

        .intro-content {
          gap: 0;
          align-items: flex-start;
          text-align: left;

          .subtitle,
          .title,
          .description {
            text-align: left;
            margin-left: 0;
            margin-right: auto;
          }

          .subtitle,
          .title,
          .description {
            content: "";
          }
        }

        &[data-animation~="animate5"]:hover {
          .button {
            .button-text {
              transform: translateX(-5px);
            }

            .button-icon {
              transform: translateX(5px);
            }
          }

        }

        .button {
          content: "";
          position: relative;
          align-self: flex-start;
          transition: all var(--composer-transition-duration-slow) ease;

          .button-text {
            content: "";
            transition: transform var(--composer-transition-duration-slow) ease;
          }

          .button-icon {
            display: flex;
            justify-content: center;
            align-items: center;
            margin-left: var(--composer-gap-sm);
            transition: all var(--composer-transition-duration-slow) ease;
          }
        }
      }

      .card {
        padding: calc(var(--composer-gap-xl) * 2) var(--composer-gap-xl);
        position: relative;
        overflow: hidden;
        transition: all var(--composer-transition-duration-normal) ease;
        border: var(--composer-border-width-xs) solid rgba(var(--composer-font-color-primary-rgb), 0.2);

        &[data-animation~="animate1"]:hover {
          background-color: var(--composer-primary-color);
          color: var(--composer-font-color-secondary);
          transform: scaleY(1.1);

          .card-title {
            color: var(--composer-font-color-secondary);
          }

          .event-item {

            .event-text-top,
            .event-text-bottom {
              color: var(--composer-font-color-secondary);
            }

            .divider {
              background-color: var(--composer-font-color-secondary);
            }
          }

          .card-number {
            color: var(--composer-font-color-secondary);
          }
        }

        &[data-animation~="animate2"] {
          transition: all var(--composer-transition-duration-normal) var(--composer-transition-easing);

          .card-content {
            position: relative;
            z-index: 2;
            transition: transform var(--composer-transition-duration-normal) ease;
          }

          .card-number {
            transition: all var(--composer-transition-duration-normal) ease;
          }

          &::before {
            content: "";
            position: absolute;
            top: 0;
            left: 0;
            width: 100%;
            height: 100%;
            background: var(--composer-primary-color);
            transform: scaleX(0);
            transform-origin: right;
            transition: transform var(--composer-transition-duration-normal) ease;
            z-index: 1;
          }

          &:hover {
            &::before {
              transform: scaleX(1);
              transform-origin: left;
            }

            .card-content {
              transform: translateX(var(--composer-gap-sm));

              .card-title,
              .event-text-top,
              .event-text-bottom {
                color: var(--composer-font-color-secondary);
              }

              .divider {
                background-color: var(--composer-font-color-secondary);
              }
            }

            .card-number {
              color: var(--composer-font-color-primary);
              -webkit-text-stroke-color: var(--composer-font-color-secondary);
              transform: scale(1.1);
            }
          }
        }

        &[data-animation~="animate3"] {
          .event-text-top {
            &::before {
              position: absolute;
              content: "";
              background-color: var(--composer-font-color-primary);
              border-radius: var(--composer-border-radius-full);
              width: var(--composer-gap-xs);
              height: var(--composer-gap-xs);
              left: -10%;
              bottom: 50%;
              animation: pulse-animation 2s infinite;
              transition: animation 2s ease-in-out;
            }
          }
        }

        &[data-animation~="animate4"]:hover {
          .divider {
            &::before {
              content: "";
              position: absolute;
              width: 100%;
              height: 100%;
              background-color: var(--composer-font-color-primary);
              animation: animate 1s linear 1;
              transition: animation 1.5s ease-in-out;
            }
          }
        }

        .card-content {
          display: flex;
          flex-direction: column;
          gap: var(--composer-gap-md);
          margin-bottom: var(--composer-gap-md);
          position: relative;

          .card-title {
            content: "";
            color: var(--composer-font-color-primary);
            margin: 0;
            padding: 0;
            position: relative;
          }

          .event-item {
            display: flex;
            flex-direction: column;
            margin: 0;

            .event-text-top {
              color: var(--composer-tertiary-color);
            }

            .event-text-bottom {
              color: var(--composer-tertiary-color);
            }

            .divider {
              display: block;
              height: var(--composer-border-width-xs);
              width: 100%;
              background-color: rgba(var(--composer-font-color-primary-rgb),
                  0.2);
              margin: 0;
              position: relative;
              transform: scaleX(1);
              transform-origin: center;
              transition: transform var(--composer-transition-duration-normal) ease-out;
              margin-bottom: var(--composer-gap-sm);

            }
          }
        }

        .card-number {
          position: absolute;
          -webkit-text-stroke-width: var(--composer-border-width-xs);
          color: var(--composer-primary-color);
          -webkit-text-fill-color: transparent;
          bottom: -40px;
          left: var(--composer-gap-xl);
          font-size: 6.5rem;
          line-height: 1;
          transform: scale(1.15);
          transform-origin: left bottom;
        }
      }
    }
  }
}


@keyframes pulse-animation {
  0% {
    box-shadow: 0 0 0 0px rgba(var(--composer-font-color-primary-rgb), 0.5);
  }

  100% {
    box-shadow: 0 0 0 7px rgba(var(--composer-font-color-primary-rgb), 0);
  }
}

@keyframes animate {

  0%,
  20% {
    transform: scaleX(0);
  }

  100% {
    transform: scaleX(1);
  }
}

@container (max-width: #{$composer-tablet-width}) {
  .container {
    .max-content {
      .cards-grid {
        .intro-card {
          padding: var(--composer-gap-lg);
          align-items: flex-start;
          text-align: left;

          .button {
            align-self: flex-start;
          }
        }

        .card {
          padding: var(--composer-gap-xl) var(--composer-gap-lg);

          .card-content {
            gap: var(--composer-gap-md);
          }

          .card-number {
            left: var(--composer-gap-lg);
            bottom: -50px;
            font-size: 12rem;
            transform: scale(2.5);
            transform-origin: left bottom;
          }
        }
      }
    }
  }
}

@container (max-width: #{$composer-phone-width}) {
  .container {
    padding: var(--composer-gap-xl) 0 !important;

    .max-content {
      .cards-grid {
        gap: 0;

        &.alignment-center {
          text-align: center;
        }

        .intro-card {
          padding: var(--composer-gap-md);
          align-items: flex-start;
          text-align: left;

          .intro-content {
            .subtitle {
              transform: translateX(0);

              &::before {
                display: none;
              }
            }
          }

          .button {
            align-self: flex-start;
          }
        }

        .card {
          padding: var(--composer-gap-lg) var(--composer-gap-md) !important;

          .card-content {
            gap: var(--composer-gap-md);
            align-items: flex-start;
            text-align: left;

            .card-title {
              text-align: left;
            }

            .event-item {
              align-items: flex-start;
              text-align: left;

              .event-text-top {
                text-align: left;
              }

              .event-text-bottom {
                text-align: left;
              }
            }
          }

          .card-number {
            bottom: -48px;
            left: var(--composer-gap-sm);
            font-size: 6rem;
            transform: scale(2.5);
            transform-origin: left bottom;
          }
        }

        .card[data-animation~="animate1"]:hover {
          transform: none;
        }

        .card {
          .card-number {
            left: var(--composer-gap-md) !important;
            bottom: -50px;
            transform: scale(2.7);
            transform-origin: left bottom;
          }
        }
      }
    }
  }
}

