fix(list3): remove hover scaling on tablet and tsx refactor

--- a/editor-components/list/list3/list3.module.scss
+++ b/editor-components/list/list3/list3.module.scss
@@ -326,6 +326,10 @@ as *;
         .card {
           padding: var(--composer-gap-xl) var(--composer-gap-lg);
 
+          &[data-animation~="animate1"]:hover {
+            transform: none;
+          }
+
           .card-content {
             gap: var(--composer-gap-md);
           }
